--- a/adynamics3/testComponents/about-hero.html
+++ b/adynamics3/testComponents/about-hero.html
@@ -37,12 +37,42 @@
 
     <!-- Template Stylesheet -->
     <link href="../css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../css2/style.css">
     <link rel="stylesheet" href="../css/course-details.css" />
     <link rel="stylesheet" href="../css/about-coolop.css">
     <link rel="stylesheet" href="../css/contact-form.css">
 
   </head>
   <body>
+    <div class="container-fluid bg-dark text-light p-0">
+      <div class="row gx-0 d-none d-lg-flex">
+        <div class="col-lg-7 px-5 text-start">
+          <div class="h-100 d-inline-flex align-items-center me-4">
+            <small class="fa fa-map-marker-alt text-primary me-2"></small>
+            <small>Bengaluru, Karanataka, India</small>
+          </div>
+          <div class="h-100 d-inline-flex align-items-center">
+            <small class="far fa-clock text-primary me-2"></small>
+            <small>himanshu@adynamics.in </small>
+          </div>
+        </div>
+        <div class="col-lg-5 px-5 text-end">
+          <div class="h-100 d-inline-flex align-items-center me-4">
+            <small class="fa fa-phone-alt text-primary me-2"></small>
+            <small>+91-8296076136</small>
+          </div>
+          <div class="h-100 d-inline-flex align-items-center mx-n2">
+            <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i
+                class="fab fa-facebook-f" style="font-size: 20px; color: #fff;"></i></a>
+            <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i
+                class="fab fa-twitter" style="font-size: 20px;"></i></a>
+            <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i
+                class="fab fa-linkedin-in" style="font-size: 20px; color:#fff"></i></a>
+            <a class="btn btn-square btn-link rounded-0" href=""><i class="fab fa-instagram"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
       <a
@@ -67,12 +97,8 @@
           <a href="../testComponents/clasess.html" class="nav-item nav-link">Classes</a>
           <a href="../blog/homepageblog.html" class="nav-item nav-link">blog</a>
         </div>
-        <a
-          style="background-color: #49aaaa"
-          href=""
-          class="btn btn-primary py-4 px-lg-5 d-none d-lg-block"
-          >ENQUIRY<i class="fa fa-arrow-right ms-3"></i
-        ></a>
+        <a style="background-color: #49aaaa;height: auto; font-size: 1em;" href=""
+        class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">ENQUIRY<i class="fa fa-arrow-right ms-3"></i></a>
       </div>
     </nav>
     <!-- Navbar End -->
@@ -220,47 +246,49 @@
 <!-- counter staert -->
 
 
-<div class="container-xxl py-6">
-  <div class="container">
-      <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-          <h6 class="text-primary text-uppercase mb-2">The Most Preferred and Trusted</h6>
-          <h1 class="display-6 mb-4">We Have Great Experience Of Aviation</h1>
-      </div>
-      <div class="row g-0 team-items" style="margin-top: 100px;">
-          <div class="container">
-              <div class="row ">
-                  <div class="col-md-3 col-sm-6 bottom-margin text-center counter-section wow fadeInUp sm-margin-bottom-ten animated" data-wow-duration="300ms" style="visibility: visible; animation-duration: 300ms; animation-name: fadeInUp; margin-top: 40px;" >
-                      <i class="fa fa-plane medium-icon" style="color: #49aaaa;"></i>
-                      <span id="anim-number-pizza" class="counter-number"></span>
-                      <span class="timer counter alt-font appear" data-to="980" data-speed="7000">2800</span>
-                      <p class="counter-title">flight Ordered</p>
-                  </div>
-                  <!-- end counter -->
-                  <!-- counter -->
-                  <div class="col-md-3 col-sm-6 bottom-margin text-center counter-section wow fadeInUp sm-margin-bottom-ten animated" data-wow-duration="600ms" style="visibility: visible; animation-duration: 600ms; animation-name: fadeInUp; margin-top: 40px;">
-                      <i class="fa fa-heart medium-icon" style="color: #49aaaa;"></i>
-                       <span class="timer counter alt-font appear" data-to="980" data-speed="7000">980</span>
-                      <span class="counter-title">Happy Clients</span>
-                  </div>
-                  <!-- end counter -->
-                  <!-- counter -->
-                  <div class="col-md-3 col-sm-6 bottom-margin-small text-center counter-section wow fadeInUp xs-margin-bottom-ten animated" data-wow-duration="900ms" style="visibility: visible; animation-duration: 900ms; animation-name: fadeInUp; margin-top: 40px;">
-                      <i class="fa fa-anchor medium-icon" style="color: #49aaaa;"></i>
-                       <span class="timer counter alt-font appear" data-to="810" data-speed="7000">810</span>
-                      <span class="counter-title">Projects Completed</span>
-                  </div>
-                  <!-- end counter -->
-                  <!-- counter -->
-                  <div class="col-md-3 col-sm-6 text-center counter-section wow fadeInUp animated" data-wow-duration="1200ms" style="visibility: visible; animation-duration: 1200ms; animation-name: fadeInUp; margin-top: 40px;">
-                      <i class="fa fa-user medium-icon" style="color: #49aaaa;"></i>
-                       <span class="timer counter alt-font appear" data-to="600"   data-speed="7000">600</span>
-                      <span class="counter-title">Clients Served</span>
-                  </div>
-              </div>
-          </div>
+<section class="chec">
+  <div class="container-xxl py-6 ">
+    <div class="container">
+        <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+            <h6 class="text-primary text-uppercase mb-2">The Most Preferred and Trusted</h6>
+            <h1 class="display-6 mb-4">We Have Great Experience Of Aviation</h1>
+        </div>
+        <div class="row g-0 team-items ">
+            <div class="container">
+                <div class="row ">
+                    <div class="col-md-3 col-sm-6 bottom-margin text-center counter-section wow fadeInUp sm-margin-bottom-ten animated" data-wow-duration="300ms" style="visibility: visible; animation-duration: 300ms; animation-name: fadeInUp; margin-top: 40px;" >
+                        <i class="fa fa-plane medium-icon" style="color: #49aaaa;"></i>
+                        <span id="anim-number-pizza" class="counter-number"></span>
+                        <span class="timer counter alt-font appear" data-to="980" data-speed="7000">2800</span>
+                        <p class="counter-title">flight Ordered</p>
+                    </div>
+                    <!-- end counter -->
+                    <!-- counter -->
+                    <div class="col-md-3 col-sm-6 bottom-margin text-center counter-section wow fadeInUp sm-margin-bottom-ten animated" data-wow-duration="600ms" style="visibility: visible; animation-duration: 600ms; animation-name: fadeInUp; margin-top: 40px;">
+                        <i class="fa fa-heart medium-icon" style="color: #49aaaa;"></i>
+                         <span class="timer counter alt-font appear" data-to="980" data-speed="7000">980</span>
+                        <span class="counter-title">Happy Clients</span>
+                    </div>
+                    <!-- end counter -->
+                    <!-- counter -->
+                    <div class="col-md-3 col-sm-6 bottom-margin-small text-center counter-section wow fadeInUp xs-margin-bottom-ten animated" data-wow-duration="900ms" style="visibility: visible; animation-duration: 900ms; animation-name: fadeInUp; margin-top: 40px;">
+                        <i class="fa fa-anchor medium-icon" style="color: #49aaaa;"></i>
+                         <span class="timer counter alt-font appear" data-to="810" data-speed="7000">810</span>
+                        <span class="counter-title">Projects Completed</span>
+                    </div>
+                    <!-- end counter -->
+                    <!-- counter -->
+                    <div class="col-md-3 col-sm-6 text-center counter-section wow fadeInUp animated" data-wow-duration="1200ms" style="visibility: visible; animation-duration: 1200ms; animation-name: fadeInUp; margin-top: 40px;">
+                        <i class="fa fa-user medium-icon" style="color: #49aaaa;"></i>
+                         <span class="timer counter alt-font appear" data-to="600"   data-speed="7000">600</span>
+                        <span class="counter-title">Clients Served</span>
+                    </div>
+                </div>
+            </div>
+    </div>
   </div>
-</div>
-</div>
+  </div>
+</section>
 <!-- counter end -->
      <!-- Footer Start -->
      <div class="container-fluid bg-dark text-light footer my-6 mb-0 py-6 mt-4 wow fadeIn" data-wow-delay="0.1s">
