--- a/adynamics3/testComponents/cource-aboutpage.html
+++ b/adynamics3/testComponents/cource-aboutpage.html
@@ -92,10 +92,9 @@
               >
                 <div class="text-center p-4">
                   <h5 class="mb-3 mt-2 mt-xl-1">
-                    CPL Training in usa</h5>
+                    CPL Training in USA</h5>
                   <p>
-                    Tempor erat elitr rebum at clita dolor diam ipsum sit diam
-                    amet diam et eos
+                    Demanding program intended to ready individuals for a professional pilot career.
                   </p>
                   <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item small">
@@ -127,10 +126,10 @@
                 class="courses-item d-flex flex-column flex-xl-row arc-shadow overflow-hidden h-100"
               >
                 <div class="text-center p-4">
-                  <h5 class="mb-3 mt-2 mt-xl-1">CPL Training in south africa</h5>
+                  <h5 class="mb-3 mt-2 mt-xl-1">CPL Training in South Africa</h5>
                   <p>
-                    Tempor erat elitr rebum at clita dolor diam ipsum sit diam
-                    amet diam et eos
+                    
+Many aspiring pilots worldwide choose of its excellent aviation infrastructure and training facilities.
                   </p>
                   <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item small">
