to change thehero section  splcouthhtml page

--- a/adynamics3/testComponents/check1.html
+++ b/adynamics3/testComponents/check1.html
@@ -239,7 +239,7 @@
               <p class="text-xl">WELCOME TO ADYNAMICS</p>
             </strong>
             <h1 class="pt- display-6">
-              Kerala's NO.1 Rated Online Spoken English Training Center
+              Mumbai NO.1 Rated Online Flying Aviation Training Center
             </h1>
            
         <div class="btn-group">
