--- a/adynamics3/testComponents/about-hero.html
+++ b/adynamics3/testComponents/about-hero.html
@@ -69,7 +69,7 @@
   <!-- Navbar Start -->
   <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
     <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-      <img src="./img/adynamicsLogo.png" width="180px" height="auto" alt="" />
+      <img src="/adynamics3/img/adynamicsLogo.png" width="180px" height="auto" alt="" />
     </a>
     <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
       <span class="navbar-toggler-icon"></span>
@@ -80,27 +80,26 @@
 
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="jj.html" class="nav-item nav-link active">Home</a>
-            <a href="testComponents/about-hero.html" class="nav-item nav-link ">About</a>
-            <a href="testComponents/cource-aboutpage.html" class="nav-item nav-link">Flying</a>
+            <a href="/adynamics3/jj.html" class="nav-item nav-link active">Home</a>
+            <a href="/adynamics3/testComponents/about-hero.html" class="nav-item nav-link ">About</a>
+            <a href="/adynamics3/testComponents/cource-aboutpage.html" class="nav-item nav-link">Flying</a>
             <div class="dropdown">
-              <a href="testComponents/clasess.html" class="nav-item nav-link nav-dropdown ">Classes</a>
+              <a href="/adynamics3/testComponents/clasess.html" class="nav-item nav-link nav-dropdown ">Classes</a>
               <div class="dropdown-menu">
-                <a href="inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
-                <a href="course-details.html">DGca CPL Classes</a>
-                <a href="inidvidual-clases/RTR.html">Radio Telephony (rtr) Class</a>
-                <a href="inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
+                <a href="/adynamics3/inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
+                <a href="/adynamics3/course-details.html">DGca CPL Classes</a>
+                <a href="/adynamics3/inidvidual-clases/RTR.html">Radio Telephony (rtr) Class</a>
+                <a href="/adynamics3/inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
               </div>
             </div>
-            <a href="blog/homepageblog.html" class="nav-item nav-link">blog</a>
+            <a href="/adynamics3/blog/homepageblog.html" class="nav-item nav-link">blog</a>
           </div>
           <!-- <a style="background-color: #49aaaa;height: auto; font-size: 1em;" href=""
             class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">ENQUIRY<i class="fa fa-arrow-right ms-3"></i></a> -->
-          <button class="enquiry-button-nav">
-            <img src="../assets/img/enquiry.png" alt="">
+          <button class="enquiry-button-nav" onclick="redirectEnquiry()">
+            <img src="/adynamics3/assets/img/enquiry.png" alt="">
             <h2>ENQUIRY</h2>
           </button>
-
         </div>
   </nav>
   <!-- Navbar End -->
