--- a/adynamics3/inidvidual-clases/cplsouth.html
+++ b/adynamics3/inidvidual-clases/cplsouth.html
@@ -23,7 +23,7 @@
   <!-- Libraries Stylesheet -->
   <link href="../lib/animate/animate.min.css" rel="stylesheet" />
   <link href="../lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="../css/hero.css" />
+
   <!-- Customized Bootstrap Stylesheet -->
   <link href="../css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="../css2/style.css">
@@ -32,6 +32,7 @@
   <link rel="stylesheet" href="../css2/style.css">
   <link rel="stylesheet" href="../css/course-details.css" />
   <link rel="stylesheet" href="../check.css">
+  <link rel="stylesheet" href="../css/hero.css" />
 </head>
 
 <body>
@@ -49,7 +50,7 @@
 
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="jj.html" class="nav-item nav-link active">Home</a>
+            <a href="../jj.html" class="nav-item nav-link active">Home</a>
             <a href="testComponents/about-hero.html" class="nav-item nav-link ">About</a>
             <a href="testComponents/cource-aboutpage.html" class="nav-item nav-link">Flying</a>
             <div class="dropdown">
@@ -711,6 +712,10 @@
   <script src="../lib/easing/easing.min.js"></script>
   <script src="../lib/waypoints/waypoints.min.js"></script>
   <script src="../lib/owlcarousel/owl.carousel.min.js"></script>
+  
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 
   <!-- Template Javascript -->
   <script src="../js/main.js"></script>
