--- a/adynamics3/testComponents/check1.html
+++ b/adynamics3/testComponents/check1.html
@@ -616,7 +616,7 @@
 
   <!-- 
     - custom js link
-  -->
+  <!-- -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../lib/wow/wow.min.js"></script>
@@ -631,7 +631,7 @@
   <script src="../js/main.js"></script>
   <script src="../assets/js/util.js"></script> <!-- util functions included in the CodyHouse framework -->
   <script src="../assets/js/swipe-content.js"></script> <!-- A Vanilla JavaScript plugin to detect touch interactions -->
-  <script src="../assets/js/main.js"></script>
+  <script src="../assets/js/main.js"></script> -->
 
 </body>
 
