Added some responsiveness

--- a/adynamics3/jj.html
+++ b/adynamics3/jj.html
@@ -200,7 +200,7 @@
           <!-- <a style="background-color: #49aaaa;height: auto; font-size: 1em;" href=""
             class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">ENQUIRY<i class="fa fa-arrow-right ms-3"></i></a> -->
           <button class="enquiry-button-nav" onclick="redirectEnquiry()">
-            <img src="/adynamics3/assets/img/enquiry.png" alt="">
+            <img src="assets\img\enquiry.png" alt="">
             <h2>ENQUIRY</h2>
           </button>
         </div>
