--- a/adynamics3/testComponents/cource-aboutpage.html
+++ b/adynamics3/testComponents/cource-aboutpage.html
@@ -714,6 +714,37 @@
             <path id="crete"
                 d="M516.76,230.59l1.63,0.05l0.68,1.01h2.37l1.58-0.58l0.53,0.64l-1.05,1.38l-4.63,0.16l-0.84-1.11l-0.89-0.53L516.76,230.59L516.76,230.59z" />
         </svg>
+        <div class="ripple ripple-1"></div>
+        <div class="ripple ripple-2"></div>
+
+        <div class="usa">
+            <div class="col-lg-6 col-md-6" data-wow-delay="0.1s">
+                <div class="courses-item d-flex flex-column flex-xl-row arc-shadow overflow-hidden h-100">
+                    <div class="text-center p-4">
+                        <h5 class="mb-3 mt-2 mt-xl-1">
+                            CPL Training in USA</h5>
+                        <p>
+                            Demanding program intended to ready individuals for a professional pilot career.
+                        </p>
+                        <ol class="breadcrumb justify-content-center mb-0">
+                            <li class="breadcrumb-item small">
+                                <i class="fa fa-signal text-primary me-2"></i>Beginner
+                            </li>
+                            <li class="breadcrumb-item small">
+                                <i class="fa fa-calendar-alt text-primary me-2"></i>3 Week
+                            </li>
+                        </ol>
+                    </div>
+                    <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
+                        <img class="img-fluid border-r10" src="../img/flying_cpltraing.png" alt="" />
+                        <div class="courses-overlay">
+                            <a class="btn btn-outline-primary border-2 courses-btn-bg"
+                                href="../inidvidual-clases/cpltaring.html">Read More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="south-africa">
             <div class="col-lg-6 col-md-6" data-wow-delay="0.3s">
                 <div class="courses-item d-flex flex-column flex-xl-row arc-shadow overflow-hidden h-100">
@@ -743,39 +774,71 @@
                 </div>
             </div>
         </div>
-
     </div>
-    <div class="ripple ripple-1"></div>
-    <div class="ripple ripple-2"></div>
 
-    <div class="usa">
-        <div class="col-lg-6 col-md-6" data-wow-delay="0.1s">
-            <div class="courses-item d-flex flex-column flex-xl-row arc-shadow overflow-hidden h-100">
-                <div class="text-center p-4">
-                    <h5 class="mb-3 mt-2 mt-xl-1">
-                        CPL Training in USA</h5>
-                    <p>
-                        Demanding program intended to ready individuals for a professional pilot career.
-                    </p>
-                    <ol class="breadcrumb justify-content-center mb-0">
-                        <li class="breadcrumb-item small">
-                            <i class="fa fa-signal text-primary me-2"></i>Beginner
-                        </li>
-                        <li class="breadcrumb-item small">
-                            <i class="fa fa-calendar-alt text-primary me-2"></i>3 Week
-                        </li>
-                    </ol>
-                </div>
-                <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-                    <img class="img-fluid border-r10" src="../img/flying_cpltraing.png" alt="" />
-                    <div class="courses-overlay">
-                        <a class="btn btn-outline-primary border-2 courses-btn-bg"
-                            href="../inidvidual-clases/cpltaring.html">Read More</a>
+    <div class="mobile-view">
+        <div class="south__africa">
+            <div class="col-lg-6 col-md-6" data-wow-delay="0.3s">
+                <div class="courses-item d-flex flex-column flex-xl-row arc-shadow overflow-hidden h-100">
+                    <div class="text-center p-4">
+                        <h5 class="mb-3 mt-2 mt-xl-1">CPL Training in South Africa</h5>
+                        <p>
+
+                            Many aspiring pilots worldwide choose of its excellent aviation infrastructure and training
+                            facilities.
+                        </p>
+                        <ol class="breadcrumb justify-content-center mb-0">
+                            <li class="breadcrumb-item small">
+                                <i class="fa fa-signal text-primary me-2"></i>Beginner
+                            </li>
+                            <li class="breadcrumb-item small">
+                                <i class="fa fa-calendar-alt text-primary me-2"></i>3 Week
+                            </li>
+                        </ol>
+                    </div>
+                    <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
+                        <img class="img-fluid border-r10" src="../img/flying_southafrica.png" alt="" />
+                        <div class="courses-overlay">
+                            <a class="btn btn-outline-primary border-2 courses-btn-bg"
+                                href="../inidvidual-clases/cplsouth.html">Read More</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+
+        <div class="USA">
+            <div class="col-lg-6 col-md-6" data-wow-delay="0.1s">
+                <div class="courses-item d-flex flex-column flex-xl-row arc-shadow overflow-hidden h-100">
+                    <div class="text-center p-4">
+                        <h5 class="mb-3 mt-2 mt-xl-1">
+                            CPL Training in USA</h5>
+                        <p>
+                            Demanding program intended to ready individuals for a professional pilot career.
+                        </p>
+                        <ol class="breadcrumb justify-content-center mb-0">
+                            <li class="breadcrumb-item small">
+                                <i class="fa fa-signal text-primary me-2"></i>Beginner
+                            </li>
+                            <li class="breadcrumb-item small">
+                                <i class="fa fa-calendar-alt text-primary me-2"></i>3 Week
+                            </li>
+                        </ol>
+                    </div>
+                    <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
+                        <img class="img-fluid border-r10" src="../img/flying_cpltraing.png" alt="" />
+                        <div class="courses-overlay">
+                            <a class="btn btn-outline-primary border-2 courses-btn-bg"
+                                href="../inidvidual-clases/cpltaring.html">Read More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
+
+    
     </div>
 
 
